Java 16 + dependabot (#1326)
* Java 16 + dependabot

* Byggeissues

Co-authored-by: Jens-Otto Larsen <jens-otto.larsen@nav.no>