@@ -1,4 +1,4 @@
-FROM navikt/java:15-appdynamics
+FROM navikt/java:16-appdynamics
 ENV APPD_ENABLED=true
 ENV TZ=Europe/Oslo
 
@@ -15,4 +15,7 @@ COPY export-vault.sh /init-scripts/export-vault.sh
 COPY web/target/lib/*.jar /app/lib/
 COPY web/target/app.jar /app/
 
-ENV JAVA_OPTS="-XX:MaxRAMPercentage=75.0 -Djava.security.egd=file:/dev/./urandom -Duser.timezone=Europe/Oslo "
+ENV JAVA_OPTS="-XX:MaxRAMPercentage=75.0 \
+                -Djava.security.egd=file:/dev/./urandom \
+                -Duser.timezone=Europe/Oslo \
+                --illegal-access=permit"
